<resources>
    <string name="app_name">ShopMyInfluence</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="empty_field">Empty field</string>
    <string name="incorrect_email">incorrect_email</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="incorrect_confirm_password">Incorrect confirm password</string>
    <string name="register"><u>Register</u></string>
    <string name="sign_in">Sign In</string>
    <string name="password_short">Password is too short</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="success_registration">Registration with Success!</string>
    <string name="wrong_password_confirm_password">Password and confirm password are different</string>
    <string name="our_brands">Our brands</string>
    <string name="premium_brands">Premium brands</string>
    <string name="all_brands">All brands</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ca">Turnover</string>
    <string name="commission">Commission</string>
    <string name="number_of_sales">Number of sales</string>
</resources>