<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detailsBrand.DetailsBrandActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name_brand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:singleLine="true"
            android:text="Prime root whole Mimosa..."
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/cairo_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description_brand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="290.00$"
            android:fontFamily="@font/cairo_regular"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/name_brand" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            app:cardMaxElevation="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linear_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/item_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:progressTint="@color/color_blue" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_1">

        <LinearLayout
            android:id="@+id/first_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="@color/color_gray"
            android:layout_margin="30dp"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/euro"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/turnover_value_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="240 $"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:fontFamily="@font/cairo_regular"
                    android:textColor="@color/color_blue"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ca"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:fontFamily="@font/cairo_regular"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="@color/color_gray"
            android:layout_margin="30dp"
            android:elevation="10dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_linear">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/commission"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/commission_value_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="32.50 $"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:fontFamily="@font/cairo_regular"
                    android:textColor="@color/color_blue"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/commission"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:fontFamily="@font/cairo_regular"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/third_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="@color/color_gray"
            android:layout_margin="30dp"
            android:elevation="10dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second_linear">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/nn"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/number_sales_value_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="240 $"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:fontFamily="@font/cairo_regular"
                    android:textColor="@color/color_blue"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_sales"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:fontFamily="@font/cairo_regular"/>


            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>